--- a/Project1.dproj
+++ b/Project1.dproj
@@ -4,7 +4,7 @@
         <MainSource>Project1.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <TargetedPlatforms>1025</TargetedPlatforms>
+        <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
         <FrameworkType>VCL</FrameworkType>
         <ProjectVersion>18.1</ProjectVersion>
@@ -37,12 +37,6 @@
     <PropertyGroup Condition="'$(Config)'=='Debug' or '$(Cfg_2)'!=''">
         <Cfg_2>true</Cfg_2>
         <CfgParent>Base</CfgParent>
-        <Base>true</Base>
-    </PropertyGroup>
-    <PropertyGroup Condition="('$(Platform)'=='iOSDevice64' and '$(Cfg_2)'=='true') or '$(Cfg_2_iOSDevice64)'!=''">
-        <Cfg_2_iOSDevice64>true</Cfg_2_iOSDevice64>
-        <CfgParent>Cfg_2</CfgParent>
-        <Cfg_2>true</Cfg_2>
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="('$(Platform)'=='Win32' and '$(Cfg_2)'=='true') or '$(Cfg_2_Win32)'!=''">
@@ -91,9 +85,6 @@
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
         <DCC_Optimize>false</DCC_Optimize>
     </PropertyGroup>
-    <PropertyGroup Condition="'$(Cfg_2_iOSDevice64)'!=''">
-        <BT_BuildType>Debug</BT_BuildType>
-    </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <Icon_MainIcon>Project1_Icon1.ico</Icon_MainIcon>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -106,27 +97,27 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="Unit1.pas">
-            <Form>Form1</Form>
+            <Form>MainForm</Form>
         </DCCReference>
         <DCCReference Include="Unit2.pas">
-            <Form>Form2</Form>
+            <Form>MenuChoice</Form>
         </DCCReference>
         <DCCReference Include="Unit3.pas">
-            <Form>Form3</Form>
+            <Form>Information</Form>
         </DCCReference>
         <DCCReference Include="Unit4.pas">
-            <Form>Form4</Form>
+            <Form>RegisterDiplomas</Form>
         </DCCReference>
         <DCCReference Include="Unit5.pas">
-            <Form>Form5</Form>
+            <Form>AdmissionCommittee</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit6.pas">
-            <Form>Form6</Form>
+            <Form>RegisterStudent</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit7.pas">
-            <Form>Form7</Form>
+            <Form>Rating</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit8.pas">
@@ -183,7 +174,6 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Platforms>
-                <Platform value="iOSDevice64">True</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
             </Platforms>
