--- a/Project1.dproj
+++ b/Project1.dproj
@@ -121,19 +121,19 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit8.pas">
-            <Form>Form8</Form>
+            <Form>MenuGenerate</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit9.pas">
-            <Form>Form9</Form>
+            <Form>workload</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit10.pas">
-            <Form>Form10</Form>
+            <Form>Teacher</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit11.pas">
-            <Form>Form11</Form>
+            <Form>JournalReplacment</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit12.pas">
@@ -145,7 +145,11 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Unit14.pas">
-            <Form>Form14</Form>
+            <Form>TaskBook</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Unit15.pas">
+            <Form>MethodicalCabinet</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Debug">
@@ -184,12 +188,27 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules">
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
                     <Platform Name="iOSDevice64">
                         <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <RemoteDir>Contents\MacOS</RemoteDir>
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
                     </Platform>
                     <Platform Name="iOSDevice32">
                         <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                    <Platform Name="iOSSimulator">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
                     </Platform>
                 </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
@@ -540,27 +559,12 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
+                <DeployClass Name="ProjectiOSDeviceResourceRules">
                     <Platform Name="iOSDevice64">
                         <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <RemoteDir>Contents\MacOS</RemoteDir>
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
                     </Platform>
                     <Platform Name="iOSDevice32">
                         <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                    <Platform Name="iOSSimulator">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
                     </Platform>
                 </DeployClass>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
